Prevent search and pagination length change fields from word-wrapping by accident

--- a/css/default.css
+++ b/css/default.css
@@ -72,12 +72,14 @@
 /* Length Change menu */
 .dataTables_length {
 	float: left;
+	white-space: nowrap;
 }
 
 /* Filter/Search */
 .dataTables_filter {
 	float: right;
 	text-align: right;
+	white-space: nowrap;
 }
 
 /* Table information */
